Fix header autohide not showing on hover.

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -223,7 +223,7 @@ div.center:not(.ad-cnt) {
   height: 10px;
   position: absolute;
 }
-:root:not(.autohide) #scroll-marker {
+:root #scroll-marker:not(.autohide) {
   pointer-events: none;
 }
 #header-bar #scroll-marker {
